2008-08-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html:
   Add middle-click document closing to the Tips and Tricks appendix.
 * src/makefile.win32:
   Expect GTK 2.10 libs to link against by default and remove GTK210
   flag. If anyone wants to build on Windows against GTK 2.6 or 2.8
   use 'make GTK280=1'.
 * src/support.c:
   Replace fprintf() with g_critical().
 * src/log.c, src/win32.c:
   Fix logging of messages in the debug window on Windows.
   When '--debug' option is given on Windows, set the
   G_SPAWN_WIN32_DEBUG flag for more debug info for spawned processes.
 * src/log.c, src/main.c:
   Don't force debug mode when compiling with GEANY_DEBUG (this affects
   only the messages on stdout and stderr). Messages are logged always
   in the debug window.


2008-08-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Add Tips and Tricks appendix.


2008-08-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, wscript, src/Makefile.am, src/makefile.win32,
   src/callbacks.c, src/callbacks.h, src/interface.c, src/log.c,
   src/log.h, src/main.c:
   Move geany_debug() into log.c.
   Use GLib log/print handlers to log messages/warnings into a
   string for later usage.
   Add a debug messages window, accessable through the help menu to
   easily view debug messages/warnings.
   This might replace the extra console window on Windows.
 * src/prefs.c:
   Fix bad wording (closes #2038807).
 * src/log.c, src/main.c, src/makefile.win32:
   Remove trailing spaces.


2008-08-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Add SCE_[CD]_COMMENTDOCKEYWORD(ERROR) comment detection to
   is_comment().
 * src/editor.c:
   Fix auto-multiline comment completion for CSS.
   Fix doc-comment keyword styles confusing auto-multiline comment
   completion.
 * src/editor.c: